--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     2 headers_received  send() has been called
     3 loading  downnloading ; responseText holds partial data
     4 done  operation completed  
+my GitHub: https://github.com/A-JA-Y
      -->
      <h1>Profile fetched from github</h1><br/>
         <hr>
