--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     3 loading  downnloading ; responseText holds partial data
     4 done  operation completed  
 my GitHub: https://github.com/A-JA-Y
+this comment is for consistency commit 
      -->
      <h1>Profile fetched from github</h1><br/>
         <hr>
