--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     3 loading  downnloading ; responseText holds partial data
     4 done  operation completed  
 my GitHub: https://github.com/A-JA-Y
-this comment is for consistency commit 
+this comment is for - iframe tag can have the data of github stats card
      -->
      <h1>Profile fetched from github</h1><br/>
         <hr>
