--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
         placeholder="Enter your GitHub user name and Hit 'Enter'"
       />
     </form>
-    <div id="card" class="container hidden">
-      <div class="profile">
-        <div class="photo"></div>
-        <hr class="divider" />
-        <div class="followers"></div>
+    <div class="parent">
+
+      <div id="card" class="container hidden">
+        <div class="profile">
+          <div class="photo"></div>
+          <hr class="divider" />
+          <div class="followers"></div>
+        </div>
       </div>
     </div>
   </body>
